syntax = "proto3";
package proto;
option go_package = "github.com/raihanlh/proto;proto";
import "google/protobuf/timestamp.proto";

message CreateArticleRequest {
  string title = 1;
  string content = 2;
  string token = 3;
}

message CreateArticleResponse {
  GetArticleResponse article = 1;
  string status = 2;
  string message = 3;
}

message GetArticleRequest {
  int64 id = 1;
}

message GetArticleResponse {
  int64 id = 1;
  string title = 2;
  string content = 3;
  int64 user_id = 4;
  google.protobuf.Timestamp created_at = 5;
	google.protobuf.Timestamp updated_at = 6;
}

message GetAllArticleByUserRequest {
  string token = 1;
}

message GetAllArticleResponse {
  repeated GetArticleResponse articles = 1;
}

message GetAllArticleRequest {}

message UpdateArticleRequest {
  int64 id = 1;
  string title = 2;
  string content = 3;
  string token = 4;
}

message DeleteArticleRequest {
  int64 id = 1;
  string token = 2;
}

message DeleteArticleResponse {
  string status = 1;
  string message = 2;
}

service ArticleService {
  rpc CreateArticle(CreateArticleRequest) returns (CreateArticleResponse) {}
  rpc GetArticleByUser(GetAllArticleByUserRequest) returns (GetAllArticleResponse) {}
  rpc GetAllArticle(GetAllArticleRequest) returns (GetAllArticleResponse) {}
  rpc GetArticleById(GetArticleRequest) returns (GetArticleResponse) {}
  rpc UpdateArticle(UpdateArticleRequest) returns (GetArticleResponse) {}
  rpc DeleteArticle(DeleteArticleRequest) returns (DeleteArticleResponse) {}
}